tests/cases/typecheck/pat_binds/duplicate_binds.hash
// run=fail, stage=typecheck

main := () => {
    k := (1, 2);

    match k {
       (a, a) => {}
    }
}
